objects/B2C_Error_Details__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_of_Records_Failed__c</fullName>
        <label>No of Records Failed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Records_Processed__c</fullName>
        <label>No of Records Processed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_and_Details__c</fullName>
        <label>Notes and Details</label>
        <length>120000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_Failed__c</fullName>
        <label>Number of Records Failed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZIP Code Rankings</fullName>
                </value>
                <value>
                    <fullName>City State Rankings</fullName>
                </value>
                <value>
                    <fullName>Dealers</fullName>
                </value>
                <value>
                    <fullName>Dealers Subdivisions</fullName>
                </value>
                <value>
                    <fullName>Model Group name</fullName>
                </value>
                <value>
                    <fullName>RDR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>B2C Error Details</label>
    <nameField>
        <label>B2C Batch Job Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>B2C Error Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>